fixed widthe on distorted.

--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,3 +1,3 @@
 .avatar.proportioned {height:auto; width:300px;}
 
-.avatar.distorted {height:400px; 200px}
+.avatar.distorted {height:400px; width:200px}
